Armor changes III
defined a Medium armor type.
Its got assigned to all transport type units:
Chinook, APC, Phase Transport, Naval Transport.

--- a/mods/sovra/rules/vehicles.yaml
+++ b/mods/sovra/rules/vehicles.yaml
@@ -638,7 +638,7 @@ APC:
 	Health:
 		HP: 35000
 	Armor:
-		Type: Heavy
+		Type: Medium
 	Mobile:
 		Speed: 128
 		PauseOnCondition: notmobile || being-captured
@@ -1152,7 +1152,7 @@ STNK:
 	Health:
 		HP: 35000
 	Armor:
-		Type: Light
+		Type: Medium
 	Mobile:
 		Speed: 128
 		Locomotor: heavywheeled
