--- a/mods/sovra/weapons/explosions.yaml
+++ b/mods/sovra/weapons/explosions.yaml
@@ -11,6 +11,7 @@
 			Heavy: 25
 			Concrete: 50
 			Steel: 25
+            Medium: 42
 		DamageTypes: Prone50Percent, TriggerProne, ExplosionDeath
 	Warhead@Smu: LeaveSmudge
 		SmudgeType: Crater
@@ -157,6 +158,7 @@ BarrelExplode:
 			Light: 50
 			Wood: 20
 			Concrete: 50
+            Medium: 80
 	Warhead@2Eff: CreateEffect
 		Explosions: building
 		ImpactSounds: kaboom25.aud
@@ -176,6 +178,7 @@ BarrelCluster:
 			Light: 50
 			Wood: 20
 			Concrete: 50
+            Medium: 80
 		DamageTypes: Prone50Percent, TriggerProne, FireDeath, Incendiary
 	Warhead@2Eff: CreateEffect
 		Explosions: large_napalm
@@ -225,6 +228,7 @@ OreExplosion:
 			Light: 60
 			Heavy: 20
             Concrete: 10
+            Medium: 45
 		DamageTypes: Prone50Percent, TriggerProne, SmallExplosionDeath
 	Warhead@3Res: CreateResource
 		AddsResourceType: Ore
