fix Yak strafe breaking
the Yak should no longer abort its strafing run when the target is no more.

--- a/mods/sovra/rules/aircraft.yaml
+++ b/mods/sovra/rules/aircraft.yaml
@@ -194,6 +194,8 @@ YAK:
 		PersistentTargeting: false
 		OpportunityFire: False
         ForceFireIgnoresActors: True
+        AttackType: Strafe
+        StrafeRunLength: 1c0
 	Aircraft:
 		CruiseAltitude: 2560
 		TurnSpeed: 16
