Shock Troopers damage on crush
Shock Troopers damage Tanks running over them, on getting crushed.

--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -765,6 +765,11 @@ SHOK:
 	WithProductionIconOverlay:
 		Types: Veterancy
 		Prerequisites: infantry.upgraded
+	Explodes@ONCRUSH:
+		Weapon: SHOKExplode
+		EmptyWeapon: SHOKExplode
+        Chance: 100
+        DeathTypes: CrushingDeath
 
 Zombie:
 	Inherits: ^Soldier
