--- a/mods/sovra/rules/world.yaml
+++ b/mods/sovra/rules/world.yaml
@@ -38,6 +38,7 @@
 	Locomotor@HEAVYWHEELED:
 		Name: heavywheeled
 		Crushes: wall, mine, crate, infantry
+        CrushDamageTypes: CrushingDeath
 		TerrainSpeeds:
 			Clear: 100
 			Rough: 50
@@ -62,6 +63,7 @@
 	Locomotor@TRACKED:
 		Name: tracked
 		Crushes: wall, infantry, mine, crate
+        CrushDamageTypes: CrushingDeath
 		TerrainSpeeds:
 			Clear: 100
 			Rough: 88
@@ -74,6 +76,7 @@
 	Locomotor@HEAVYTRACKED:
 		Name: heavytracked
 		Crushes: wall, infantry, mine, crate, heavywall
+        CrushDamageTypes: CrushingDeath
 		TerrainSpeeds:
 			Clear: 100
 			Rough: 88
