--- a/mods/sovra/weapons/explosions.yaml
+++ b/mods/sovra/weapons/explosions.yaml
@@ -365,3 +365,7 @@ VisualExplodeHusk:
 		ImpactSounds: splash9.aud
 		ValidTargets: Water, Underwater
 		InvalidTargets: Bridge
+
+SHOKExplode:
+	Inherits: PortaTesla
+	-Report:
