--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -168,6 +168,7 @@ E2:
 		Weapon: UnitExplodeSmall
 		EmptyWeapon: UnitExplodeSmall
 		DamageSource: Killer
+        DeathTypes: ExplosionDeath, SmallExplosionDeath, FireDeath, CrushingDeath
 	ProducibleWithLevel:
 		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
@@ -276,6 +277,7 @@ E4:
 		Weapon: Napalm
 		EmptyWeapon: VisualExplode
 		Chance: 50
+        DeathTypes: ExplosionDeath, SmallExplosionDeath, FireDeath, CrushingDeath
 	WithInfantryBody:
 		DefaultAttackSequence: shoot
 		RequiresCondition: !parachute
