bugfix and change
Mobile GAP Generator power usage does not disappear when loaded inside a naval transport.
Weight of Demolition Truck increased to 3 from 2. (ensures max. 2 per LST)

--- a/mods/sovra/rules/aircraft.yaml
+++ b/mods/sovra/rules/aircraft.yaml
@@ -302,7 +302,7 @@ TRAN:
 	HitShape:
 		Type: Circle
 			Radius: 512
-	ChangesHealth:
+	ChangesHealth@MECH:
 		RequiresCondition: selfrepair && !airborne
 		Step: 2000
 		Delay: 80
